sfdx-source/main/default/objects/PC_NDTH_Host_Locations__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check if the Host Location (Specialist Location) under NDTH is active or
not.</description>
    <inlineHelpText>If the checkbox is checked, then the Host Location is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>