sfdx-source/main/default/objects/PC_NDTH_Host_Locations__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>PrC NDTH Host Locations</relationshipLabel>
    <relationshipName>PrC_NDTH_Host_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>