sfdx-source/main/default/objects/PC_NDTH_Host_Locations__c/fields/NDTH__c.field-meta.xml
<CustomField>
    <fullName>NDTH__c</fullName>
    <label>NDTH ID</label>
    <referenceTo>PC_NDTH__c</referenceTo>
    <relationshipLabel>PrC NDTH Host Locations</relationshipLabel>
    <relationshipName>PC_NDTH_Host_Locations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>